Fix text dark mode color

--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  padding: 2rem;
-  color: black;
-  
+  padding: 2rem;  
 }
 
 * {
